Whoops. Fixed the comments up properly.

--- a/clients/lcdproc/lcdproc.conf
+++ b/clients/lcdproc/lcdproc.conf
@@ -116,10 +116,10 @@ Active=false
 # false : the date is displayed in format HH:MM
 # [default: true; legal: true, false]
 #showSecs=true
-# Whether or not to show 12 hour time
+# Whether or not to show 12 or 24 hour time
 # true : the clock is displayed in 24 hour format (default)
 # false : the clock is displayed in 12 hour format
-# [default: false; legal: true, false]
+# [default: true; legal: true, false]
 #TwentyFourHour=true
 
 [Uptime]
